--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "weather-cli",
+  "name": "weather-cli-client-side-api",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "CLI for getting weather",
-  "main": "index.js",
-  "bin": "./index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +22,10 @@
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "dependencies": {
+    "axios": "^1.7.7",
+    "chalk": "^5.3.0",
+    "dedent-js": "^1.0.1"
   }
 }
